fixed github button not linking correctly

--- a/Eportfolio/index.html
+++ b/Eportfolio/index.html
@@ -228,12 +228,12 @@
             ">
             LinkedIn
           </a>
-            <a href="#" class="
+            <a href="https://github.com/DennisEgh" target="_blank" class="
             footer__social--link
             ">
             GitHub
           </a>
-            <a href="https://github.com/DennisEgh" target="_blank" class="
+            <a href="#landingpage" target="_blank" class="
             footer__social--link
         
             " onclick="toggleModal()">
